<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/register_image" />


    <TextView
        android:id="@+id/register_text_we_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:text="@string/register_text_withsend"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/normalText"
        android:textColor="@color/md_black_1000"
        android:gravity="center"
        android:layout_margin="@dimen/vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/register_text_we_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_code"
        />
    <EditText
        android:id="@+id/register_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_enter_code"
        style="@style/edit_register_text"
        android:background="@color/accent"
        android:backgroundTint="@color/primary"
        android:hint="@string/register_hint_default_code"
        android:maxLength="6"
        android:gravity="center"
         />
</androidx.constraintlayout.widget.ConstraintLayout>