<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ChangeNameFragment">


    <EditText
        android:id="@+id/settings_input_name"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_marginTop="88dp"
        android:background="@color/accent"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/settings_hint_input_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_input_surname"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:background="@color/accent"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:hint="@string/settings_hint_input_surname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/settings_input_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/settings_input_name"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_name" />

    <TextView
        android:id="@+id/settings_change_name_title"
        android:layout_width="339dp"
        android:layout_height="44dp"
        android:text="@string/change_name_settings_title_text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_input_name"
        app:layout_constraintEnd_toEndOf="@+id/settings_input_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/settings_input_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.704" />
</androidx.constraintlayout.widget.ConstraintLayout>